<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MeetEazy</string>
    <string name="text_in_india">in India</string>
    <string name="text_made_with">Made with</string>
    <string name="content_description_logo">Brand Logo</string>
    <string name="content_description_love">Love</string>
    <string name="onboarding_heading_first_slide">Create or join meeting rooms</string>
    <string name="onboarding_heading_second_slide">Share your screen</string>
    <string name="onboarding_heading_third_slide">Connect with your friends and co-workers</string>
    <string name="onboarding_heading_fourth_slide">Picture-in-picture mode</string>
    <string name="onboarding_heading_fifth_slide">Create contacts</string>
    <string name="onboarding_description_first_slide">Create or join a room for lag-free video meeting anytime, anywhere.</string>
    <string name="onboarding_description_second_slide">Easily share your screen, so they\'ll see what you see.</string>
    <string name="onboarding_description_third_slide">Talk with your friends and co-workers over free voice &amp; video calls anytime.</string>
    <string name="onboarding_description_fourth_slide">Never lose any moment of an important meeting or call while using other apps.</string>
    <string name="onboarding_description_fifth_slide">Easily create a contact if you want to call anyone next time in one click.</string>
    <string name="button_text_skip">Skip</string>
    <string name="button_text_next">Next</string>
    <string name="button_text_get_started">Get Started</string>
    <string name="title_sign_up_activity">Create Account</string>
    <string name="body_text_sign_up_activity">We need a few details to get your account ready</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_create_password">Create Password</string>
    <string name="button_text_sign_up">Sign Up</string>
    <string name="text_already_have_an_account">Already have an account?</string>
    <string name="link_text_sign_in">Sign In</string>
    <string name="error_empty_first_name">First name is required.</string>
    <string name="error_invalid_first_name">Invalid first name.</string>
    <string name="error_empty_last_name">Last name is required.</string>
    <string name="error_invalid_last_name">Invalid last name.</string>
    <string name="error_empty_email">Please enter your email address.</string>
    <string name="error_invalid_email">Please enter a valid email address.</string>
    <string name="error_empty_password">Please enter your password.</string>
    <string name="error_invalid_password">Your password must be at least 8 characters long, must contain at least 1 uppercase, 1 lowercase, 1 numeric &amp; 1 special character.</string>
    <string name="title_email_verification_activity">Verify Your Email Address</string>
    <string name="text_hey">Hey</string>
    <string name="text_whitespace">&#160;</string>
    <string name="placeholder_first_name">John</string>
    <string name="body_text_email_verification_activity">You\'re almost ready to start enjoying MeetEazy. Now we need to verify your email address to finish signing up for MeetEazy. Please click on the Verify button and we\'ll send you a verification link to:</string>
    <string name="placeholder_email">user@example.com</string>
    <string name="button_text_verify">Verify</string>
    <string name="title_sign_in_activity">Welcome Back!</string>
    <string name="body_text_sign_in_activity">Please Sign In to continue</string>
    <string name="hint_password">Password</string>
    <string name="link_text_forgot_password">Forgot Password?</string>
    <string name="button_text_sign_in">Sign In</string>
    <string name="text_do_not_have_an_account">Don\'t have an account?</string>
    <string name="link_text_sign_up">Sign Up</string>
    <string name="title_reset_password_activity">Reset Password</string>
    <string name="body_text_reset_password_activity">Please enter the email address associated with your account then we\'ll send you a link to reset your password.</string>
    <string name="hint_registered_email">Registered Email</string>
    <string name="text_remembered_password">Remembered Password?</string>
    <string name="button_text_send_link">Send Link</string>
    <string name="item_title_profile">Profile</string>
    <string name="item_title_call">Call</string>
    <string name="item_title_delete">Delete</string>
    <string name="toolbar_title_search">Search</string>
    <string name="toolbar_title_selected">selected</string>
    <string name="navigation_content_description_search">Search</string>
    <string name="content_description_no_internet">No internet</string>
    <string name="error_title_no_internet">You\'re offline</string>
    <string name="error_message_no_internet">You aren\'t connected to internet. Please check your connection and try again.</string>
    <string name="button_text_try_again">Try Again</string>
    <string name="content_description_no_contacts_found">No contacts found</string>
    <string name="error_title_no_contacts_found">No contacts found</string>
    <string name="error_message_no_contacts_found">Your contact list is empty. Click on the "Add" button to create new contacts.</string>
    <string name="button_text_refresh">Refresh</string>
    <string name="content_description_new">New</string>
    <string name="placeholder_full_name">Full Name</string>
    <string name="content_description_call">Call</string>
    <string name="text_outgoing_call" tools:ignore="TypographyEllipsis">Outgoing call...</string>
    <string name="text_outgoing_group_call" tools:ignore="TypographyEllipsis">"Outgoing group call..."</string>
    <string name="text_plus">+</string>
    <string name="placeholder_count">Many</string>
    <string name="text_others">Others</string>
    <string name="text_other">Other</string>
    <string name="content_description_end_call">End call</string>
    <string name="text_incoming_call" tools:ignore="TypographyEllipsis">Incoming call...</string>
    <string name="text_incoming_group_call" tools:ignore="TypographyEllipsis">"Incoming group call..."</string>
    <string name="text_is_calling_you_and">is calling You &amp;</string>
    <string name="content_description_reject_call">Reject call</string>
    <string name="content_description_answer_call">Answer call</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="placeholder_last_name">Doe</string>
    <string name="text_email">Email</string>
    <string name="text_about">About</string>
    <string name="placeholder_about">Hey there! I am using MeatEazy.</string>
    <string name="content_description_edit">Edit</string>
    <string name="content_description_delete">Delete</string>
    <string name="content_desc_update_picture">Update picture</string>
    <string name="text_password">Password</string>
    <string name="placeholder_password">********</string>
    <string name="error_empty_about">Please enter something about yourself.</string>
    <string name="list_item_text_theme">Theme</string>
    <string name="content_description_theme">Theme</string>
    <string name="text_version">Version</string>
    <string name="text_creator">Creator</string>
    <string name="text_website">Website</string>
    <string name="text_linkedin">LinkedIn</string>
    <string name="text_github">GitHub</string>
    <string name="text_instagram">Instagram</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_twitter">Twitter</string>
    <string name="placeholder_version">v1.0</string>
    <string name="placeholder_creator">Pushpendra Yadav</string>
    <string name="placeholder_creator_email">pushpendray1337@gmail.com</string>
    <string name="placeholder_website">https://pushpendra1337.github.io</string>
    <string name="placeholder_linkedin">im-pushpendra</string>
    <string name="placeholder_github">pushpendra1337</string>
    <string name="placeholder_instagram">sinister__420</string>
    <string name="placeholder_facebook">sinister1337</string>
    <string name="placeholder_twitter">sinister__420</string>
    <string name="content_description_go_to">Go to</string>
    <string name="bottom_sheet_dialog_title_choose">Choose</string>
    <string name="list_item_text_create_new_contact">Create new contact</string>
    <string name="list_item_text_create_new_room">Create new room</string>
    <string name="list_item_text_join_a_room">Join a room</string>
    <string name="content_description_create_new_contact">Create new contact</string>
    <string name="content_description_join_a_room">Join a room</string>
    <string name="content_description_create_new_room">Create new room</string>
    <string name="bottom_sheet_dialog_title_set_profile_picture">Set profile picture</string>
    <string name="list_item_text_take_a_photo">Take a photo</string>
    <string name="list_item_text_select_from_gallery">Select from gallery</string>
    <string name="list_item_text_remove_current_photo">Remove current photo</string>
    <string name="content_description_take_a_photo">Take a photo</string>
    <string name="content_description_select_from_gallery">Select from gallery</string>
    <string name="content_description_remove_current_photo">Remove current photo</string>
    <string name="dialog_title_no_internet">Whoops!</string>
    <string name="dialog_message_no_internet">You aren\'t connected to internet. Make sure that Wi-Fi or mobile data is turned on, then try again.</string>
    <string name="dialog_button_text_ok">OK</string>
    <string name="dialog_button_text_settings">Settings</string>
    <string name="content_description_email_sent">Email sent</string>
    <string name="dialog_title_email_verification">Email has been sent!</string>
    <string name="dialog_message_1_email_verification">We\'ve sent a verification email to:</string>
    <string name="dialog_message_2_email_verification">Please check your inbox and click on the verification link to continue.</string>
    <string name="dialog_title_reset_password">Email has been sent!</string>
    <string name="dialog_message_reset_password">We\'ve sent a password reset link to your email address. Please check your inbox and click on the link to reset your password.</string>
    <string name="dialog_button_text_change_email">Change Email</string>
    <string name="content_description_disable_battery_optimization">Disable battery optimization</string>
    <string name="dialog_title_battery_optimization">Disable battery optimization</string>
    <string name="dialog_message_battery_optimization">To receive notifications, calls and other important alerts, battery optimization must be disabled in settings for MeetEazy.</string>
    <string name="dialog_button_text_cancel">Cancel</string>
    <string name="dialog_title_create_contact">Create contact</string>
    <string name="hint_contact_email">Contact Email</string>
    <string name="error_empty_contact_email">Please enter an email address.</string>
    <string name="dialog_btn_text_save">Save</string>
    <string name="content_description_delete_contact">Delete contact</string>
    <string name="list_item_text_profile">Profile</string>
    <string name="list_item_text_settings">Settings</string>
    <string name="list_item_text_about">About</string>
    <string name="list_item_text_feedback">Feedback</string>
    <string name="content_description_profile">Profile</string>
    <string name="content_description_settings">Settings</string>
    <string name="content_description_about">About</string>
    <string name="content_description_feedback">Feedback</string>
    <string name="dialog_button_text_sign_out">Sign Out</string>
    <string name="content_description_close">Close</string>
</resources>