<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView_dialog_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_medium"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:paddingBottom="@dimen/padding_compact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout_logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_titlebar_height"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/margin_24dp"
                android:layout_height="@dimen/margin_24dp"
                android:layout_gravity="center"
                android:layout_marginEnd="6dp"
                android:contentDescription="@string/content_description_logo"
                android:src="@drawable/img_logo" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_compact" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin_20dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_close"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorIconography" />

        <View
            android:id="@+id/divider_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/colorDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_logo" />

        <LinearLayout
            android:id="@+id/linearLayout_profile"
            android:layout_width="0dp"
            android:layout_height="@dimen/one_line_list_item_height"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padding_compact"
            android:paddingVertical="@dimen/padding_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_title">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_profile"
                android:src="@drawable/ic_baseline_account_circle_24"
                app:tint="@color/colorIconography" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32dp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:text="@string/list_item_text_profile"
                android:textColor="@color/colorMediumEmphasisText"
                android:textSize="@dimen/text_size_medium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_settings"
            android:layout_width="0dp"
            android:layout_height="@dimen/one_line_list_item_height"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padding_compact"
            android:paddingVertical="@dimen/padding_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_profile">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_settings"
                android:src="@drawable/ic_baseline_settings_24"
                app:tint="@color/colorIconography" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32dp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:text="@string/list_item_text_settings"
                android:textColor="@color/colorMediumEmphasisText"
                android:textSize="@dimen/text_size_medium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_about"
            android:layout_width="0dp"
            android:layout_height="@dimen/one_line_list_item_height"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padding_compact"
            android:paddingVertical="@dimen/padding_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_settings">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_about"
                android:src="@drawable/ic_baseline_info_24"
                app:tint="@color/colorIconography" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32dp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:text="@string/list_item_text_about"
                android:textColor="@color/colorMediumEmphasisText"
                android:textSize="@dimen/text_size_medium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_feedback"
            android:layout_width="0dp"
            android:layout_height="@dimen/one_line_list_item_height"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padding_compact"
            android:paddingVertical="@dimen/padding_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_about">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_feedback"
                android:src="@drawable/ic_baseline_feedback_24"
                app:tint="@color/colorIconography" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32dp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:text="@string/list_item_text_feedback"
                android:textColor="@color/colorMediumEmphasisText"
                android:textSize="@dimen/text_size_medium" />

        </LinearLayout>

        <View
            android:id="@+id/divider_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/colorDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_feedback" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_out"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height_medium"
            android:layout_marginHorizontal="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/dialog_button_text_sign_out"
            android:textSize="@dimen/text_size_medium"
            app:cornerRadius="@dimen/corner_radius_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
