<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout_bottom_sheet_dialog_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_dialog"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_line_list_item_height"
            android:orientation="vertical"
            android:padding="@dimen/padding_medium">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/bottom_sheet_dialog_title_set_profile_picture"
                android:textAlignment="center"
                android:textColor="@color/colorHighEmphasisText"
                android:textSize="@dimen/text_size_compact" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/colorDivider" />

        <LinearLayout
            android:id="@+id/linearLayout_take_a_photo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_line_list_item_height"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_take_a_photo"
                android:src="@drawable/ic_baseline_photo_camera_24"
                app:tint="@color/colorIconography" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32dp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:text="@string/list_item_text_take_a_photo"
                android:textColor="@color/colorMediumEmphasisText"
                android:textSize="@dimen/text_size_medium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_select_from_gallery"
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_line_list_item_height"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_select_from_gallery"
                android:src="@drawable/ic_baseline_photo_library_24"
                app:tint="@color/colorIconography" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32dp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:text="@string/list_item_text_select_from_gallery"
                android:textColor="@color/colorMediumEmphasisText"
                android:textSize="@dimen/text_size_medium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_remove_current_photo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_line_list_item_height"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_remove_current_photo"
                android:src="@drawable/ic_baseline_remove_circle_24"
                app:tint="@color/colorIconography" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32dp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:text="@string/list_item_text_remove_current_photo"
                android:textColor="@color/colorMediumEmphasisText"
                android:textSize="@dimen/text_size_medium" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
